# cheesecake-base

./: .editorconfig  .env  .gitignore  Cargo.toml  README.md  cheesecake.toml  rustfmt.toml
app/controllers/: Cargo.toml  index.rs  lib.rs
app/views/: Cargo.toml  index.rs
config/: Cargo.toml  lib.rs
config/app/: app_state.rs  env.rs  lifecycle.rs  mod.rs  routing.rs
config/cheesecake/: app_error.rs  app_state.rs  controller.rs  env.rs  env_utils.rs  lifecycle.rs  logging.rs  mod.rs  routing.rs  view.rs
db/entities/: Cargo.toml
db/entities/src/: mod.rs
db/migrations/: .env  Cargo.toml
resources/static/: base.css
resources/templates/: base.html  index.html
test/: Cargo.toml
