[workspace]
resolver = "2"
members = ["test", "db/migrations", "db/entities", "app/controllers", "app/views", "config", "bin"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
async-trait = "0.1.88"
anyhow = "1.0.97"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.40"
hotwatch = "0.5.0"
serde_json = "1.0.140"
tera = "1.20.0"
thiserror = "2.0.12"
dotenvy = "0.15.7"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.8.3", features = ["tokio", "ws"] }
tower = { version = "0.5.2", features = ["balance", "limit", "load-shed", "timeout", "tracing"] }
tower-http = { version = "0.6.2", features = ["fs", "timeout", "trace"] }
sea-orm = { version = "1.1.7", features = ["sqlx-sqlite"] }

