[package]
name = "config"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
sea-orm = { version = "1.1.8", features = ["runtime-tokio"] }
tracing = "0.1.41"
async-trait = "0.1.88"
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["ws"] }
tower = { version = "0.5.2", features = ["load-shed", "limit"] }
tower-http = { version = "0.6.2", features = ["fs", "timeout", "trace", "tracing"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.40"
hotwatch = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
tokio = "1.44.1"
thiserror = "2.0.12"
dotenvy = "0.15.7"
