[package]
name = "config"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
sea-orm = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
hotwatch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
