[package]
name = "controllers"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sea-orm = { workspace = true }

views = { path = "../views" }
entities = { path = "../../db/entities" }
config = { path = "../../config" }
