[package]
name = "views"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
axum = "0.8.3"
hotwatch = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.140"
tera = "1.20.0"
thiserror = "2.0.12"
tokio = "1.44.1"
anyhow = "1.0.97"
entities = { path = "../../db/entities" }
config = { path = "../../config" }
