[package]
name = "views"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
axum = { workspace = true }
hotwatch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
entities = { path = "../../db/entities" }
config = { path = "../../config" }
